<resources xmlns:tools="http://schemas.android.com/tools">
  <!-- App-wide -->
  <string name="app_name">Quick Notie</string>
  <string name="app_description">Take your notes the quick way. Made by Lexis.</string>

  <!-- Info text - To display any normal text -->
  <!-- General -->
  <string name="info_action">Action</string>
  <!-- Dialogs -->
  <string name="info_save_confirm">There are changes to the note, do you want to save?</string>
  <string name="info_delete_confirm">This note will be deleted permanently, do you want to continue?</string>
  <!-- MainActivity -->
  <string name="info_search_hint">Enter anything…</string>
  <string name="info_folders">Folders</string>
  <!-- MainActivity sort dialog -->
  <string name="info_sort">Sort note list</string>
  <string name="info_sort_type">Sort type</string>
  <string name="info_sort_id">By note ID</string>
  <string name="info_sort_name">By name</string>
  <string name="info_sort_color">By color</string>
  <string name="info_sort_saved_date">By saved date</string>
  <string name="info_sort_deleted_date">By deleted date</string>
  <string name="info_sort_order">Sort order</string>
  <string name="info_sort_ascending">Ascending</string>
  <string name="info_sort_descending">Descending</string>
  <!-- EditorActivity top toolbar -->
  <string name="info_title_hint">Title</string>
  <string name="info_text_hint">Enter anything…</string>
  <string name="info_selection">%d notes selected</string>
  <!-- EditorActivity bottom appbar -->
  <string name="info_undo_history">Undo history</string>
  <string name="info_redo_history">Redo history</string>

  <!-- Alert text - To display warnings -->
  <string name="alert_permission_denied_title">Permission request was denied</string>
  <string name="alert_permission_denied_message_storage">Storage permission is needed by \'%s\' to save notes into the device.</string>
  <string name="alert_permission_denied_message_camera">Camera permission is needed by \'%s\' to add photos into notes.</string>

  <!-- Placeholder text - Temporary text for development -->
  <string name="placeholder_undo_redo">Undo Increase indent</string>

  <!-- RegEx patterns - For matching text -->
  <string name="regex_align_tags">
    <![CDATA[[\\s\\t]*<[\\s\\t]*align[\\s\\t]*.*[\\s\\t]*>.*</[\\s\\t]*align[\\s\\t]*>[\\s\\t]*]]>
  </string>
  <string name="regex_color_open_tag">
    <![CDATA[<[\\s\\t]*color[\\s\\t]*.*[\\s\\t]*>]]>
  </string>
  <string name="regex_color_end_tag">
    <![CDATA[</[\\s\\t]*color[\\s\\t]*>]]>
  </string>
  <string name="regex_hidden_region">
    <![CDATA[</[\\s\\t]*color[\\s\\t]*>]]>
  </string>
  <string name="regex_image_reference" tools:ignore="TypographyDashes">
    \\[image_[0-9]+]:.*
  </string>

  <!-- Predefined text - For reuse in many functions -->
  <string name="predefined_hidden_text"><![CDATA[[hidden]: <>]]></string>
  <string name="predefined_link">[Link name](link)</string>
  <string name="predefined_image">\n![alt text][image_%d]\n</string>
  <string name="predefined_image_reference">\n[image_%d]: %s\n</string>

  <!-- Transition text - For opening another activity with an animation -->
  <string name="transition_open_note">openNote</string>
  <string name="transition_new_note">newNote</string>

  <!-- Actions - Labels for buttons, menus -->
  <!-- General -->
  <string name="action_back">Back</string>
  <string name="action_close">Close</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_yes">Yes</string>
  <string name="action_no">No</string>
  <string name="action_default">Default</string>
  <string name="action_retry">Retry</string>
  <string name="action_reset">Reset</string>
  <string name="action_save">Save</string>
  <string name="action_restore_default">Restore default</string>
  <string name="action_select_all">Select all</string>
  <!-- MainActivity top toolbar -->
  <string name="action_sort">Sort</string>
  <string name="action_create_folder">Create folder from selection</string>
  <!-- MainActivity bottom bar -->
  <string name="action_add">Add a Note</string>
  <string name="action_show_menu">Show menu</string>
  <string name="action_settings">Settings</string>
  <string name="action_add_generate">Note generation</string>
  <!-- MainActivity drawer -->
  <string name="action_drawer_all">All notes</string>
  <string name="action_drawer_favorites">Favorites</string>
  <string name="action_drawer_locked">Locked notes</string>
  <string name="action_drawer_trash">Trash</string>
  <string name="action_drawer_manage">Manage folders</string>
  <!-- EditorActivity top toolbar -->
  <string name="action_preview">Preview mode</string>
  <string name="action_edit">Edit mode</string>
  <string name="action_remind">Set a reminder</string>
  <string name="action_share">Share</string>
  <string name="action_export">Export as file…</string>
  <string name="action_delete">Delete</string>
  <string name="action_lock">Lock note</string>
  <string name="action_restore">Restore</string>
  <string name="action_save_to_quicknotie">Save to QuickNotie</string>
  <!-- EditorActivity bottom sheet dialog -->
  <string name="action_undo">Undo</string>
  <string name="action_redo">Redo</string>
  <string name="action_format_size">Text size</string>
  <string name="action_format_background">Background color</string>
  <string name="action_format_color">Text color</string>
  <string name="action_format_style">Text style</string>
  <string name="action_add_content">Add a Content</string>
  <!-- EditorActivity action_add_content bottom dialog -->
  <string name="action_add_camera">Capture</string>
  <string name="action_add_image">Image</string>
  <string name="action_add_table">Table</string>
  <string name="action_add_codeblock">Codeblock</string>
  <string name="action_add_link">Link</string>
  <string name="action_add_quote">Quote</string>
  <string name="action_add_line">Horizontal line</string>
  <!-- EditorActivity action_format_style bottom dialog -->
  <string name="action_align_active">Alignment</string>
  <string name="action_align_start">Align left</string>
  <string name="action_align_center">Align center</string>
  <string name="action_align_end">Align right</string>
  <string name="action_bullet">Bulleted list</string>
  <string name="action_number">Numbered list</string>
  <string name="action_format_bold">Bold</string>
  <string name="action_format_italic">Italic</string>
  <string name="action_format_underline">Underline</string>
  <string name="action_format_strikethrough">Strikethrough</string>
  <string name="action_format_superscript">Superscript</string>
  <string name="action_format_subscript">Subscript</string>
  <string name="action_format_indent_increase">Increase indent</string>
  <string name="action_format_indent_decrease">Decrease indent</string>
  <!-- EditorActivity action_format_color bottom dialog -->
  <string name="action_color_red">Red</string>
  <string name="action_color_orange">Orange</string>
  <string name="action_color_yellow">Yellow</string>
  <string name="action_color_green">Green</string>
  <string name="action_color_tortoise">Tortoise</string>
  <string name="action_color_cyan">Cyan</string>
  <string name="action_color_blue">Blue</string>
  <string name="action_color_violet">Violet</string>
  <string name="action_color_purple">Purple</string>
  <string name="action_color_magenta">Magenta</string>
  <string name="action_color_pink">Pink</string>
  <string name="action_color_black">Black</string>
  <string name="action_color_lightgray">Light gray</string>
  <string name="action_color_light">Light</string>
  <string name="action_color_white">White</string>
  <!-- EditorActivity action_format_background bottom dialog -->
  <string name="action_color_light_red">Red</string>
  <string name="action_color_light_orange">Orange</string>
  <string name="action_color_light_yellow">Yellow</string>
  <string name="action_color_light_green">Green</string>
  <string name="action_color_light_tortoise">Tortoise</string>
  <string name="action_color_light_cyan">Cyan</string>
  <string name="action_color_light_blue">Blue</string>
  <string name="action_color_light_violet">Violet</string>
  <string name="action_color_light_purple">Purple</string>
  <string name="action_color_light_magenta">Magenta</string>
  <string name="action_color_light_pink">Pink</string>
  <string name="action_color_lightergray">Lighter gray</string>
</resources>