<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <com.google.android.material.bottomappbar.BottomAppBar
    android:id="@+id/bottomAppBar"
    style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    app:contentInsetStart="0dp"
    app:fabAlignmentMode="end"
    app:fabAnimationMode="scale"
    app:fabCradleRoundedCornerRadius="16dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal">

      <ImageButton
        android:id="@+id/action_add_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/action_add_content"
        android:src="@drawable/action_add_content"
        app:tint="?attr/colorOnPrimary" />

      <ImageButton
        android:id="@+id/action_format_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/action_format_style"
        android:src="@drawable/action_format_style"
        app:tint="?attr/colorOnPrimary" />

      <ImageButton
        android:id="@+id/action_format_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/action_format_color"
        android:src="@drawable/action_format_color"
        app:tint="?attr/colorOnPrimary" />

      <ImageButton
        android:id="@+id/action_format_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/action_format_background"
        android:src="@drawable/action_format_background"
        app:tint="?attr/colorOnPrimary" />

      <ImageButton
        android:id="@+id/action_undo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/action_undo"
        android:src="@drawable/action_undo"
        app:tint="?attr/colorOnPrimary" />

      <ImageButton
        android:id="@+id/action_redo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/action_redo"
        android:src="@drawable/action_redo"
        app:tint="?attr/colorOnPrimary" />
    </LinearLayout>
  </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>