<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/layout_root"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  tools:context=".activities.EditorActivity">

  <TextView
    android:id="@+id/info_format_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:padding="@dimen/bottom_sheet_dialog_title_padding"
    android:text="@string/action_format_background"
    android:textAlignment="center"
    android:textColor="?attr/colorOnSecondary"
    android:textSize="@dimen/bottom_sheet_dialog_title_text_size" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/action_reset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignTop="@id/info_format_color"
    android:layout_alignBottom="@id/info_format_color"
    android:layout_alignEnd="@id/info_format_color"
    android:layout_marginHorizontal="@dimen/unelevated_button_margin"
    android:text="@string/action_reset"
    android:textColor="?android:textColorLink"
    android:textSize="@dimen/unelevated_button_text_size"
    android:foreground="?selectableItemBackground"
    android:background="@color/transparent"
    android:theme="@style/Widget.MaterialComponents.Button.UnelevatedButton" />

  <ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/info_format_color">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <LinearLayout
        android:id="@+id/layout_first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_horizontal">

        <ImageButton
          android:id="@+id/action_color_lightred"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/lightred"
          android:contentDescription="@string/action_color_light_red" />

        <ImageButton
          android:id="@+id/action_color_lightorange"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/lightorange"
          android:contentDescription="@string/action_color_light_orange" />

        <ImageButton
          android:id="@+id/action_color_lightyellow"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/lightyellow"
          android:contentDescription="@string/action_color_light_yellow" />

        <ImageButton
          android:id="@+id/action_color_lightgreen"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/lightgreen"
          android:contentDescription="@string/action_color_light_green" />

        <ImageButton
          android:id="@+id/action_color_lighttortoise"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/lighttortoise"
          android:contentDescription="@string/action_color_light_tortoise" />

        <ImageButton
          android:id="@+id/action_color_lightcyan"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/lightcyan"
          android:contentDescription="@string/action_color_light_cyan" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/layout_second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_first_row"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_horizontal">

        <ImageButton
          android:id="@+id/action_color_lightblue"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/lightblue"
          android:contentDescription="@string/action_color_light_blue" />

        <ImageButton
          android:id="@+id/action_color_lightviolet"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/lightviolet"
          android:contentDescription="@string/action_color_light_violet" />

        <ImageButton
          android:id="@+id/action_color_lightpurple"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/lightpurple"
          android:contentDescription="@string/action_color_light_purple" />

        <ImageButton
          android:id="@+id/action_color_lightmagenta"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/lightmagenta"
          android:contentDescription="@string/action_color_light_magenta" />

        <ImageButton
          android:id="@+id/action_color_lightpink"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/lightpink"
          android:contentDescription="@string/action_color_light_pink" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/layout_third_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_second_row"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_horizontal">

        <ImageButton
          android:id="@+id/action_color_lightgray"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/lightgray"
          android:contentDescription="@string/action_color_lightgray" />

        <ImageButton
          android:id="@+id/action_color_lightergray"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/lightergray"
          android:contentDescription="@string/action_color_lightergray" />

        <ImageButton
          android:id="@+id/action_color_light"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/light"
          android:contentDescription="@string/action_color_light" />

        <ImageButton
          android:id="@+id/action_color_white"
          android:layout_width="@dimen/rounded_layout_icon_size"
          android:layout_height="@dimen/rounded_layout_icon_size"
          android:layout_marginHorizontal="@dimen/rounded_layout_margin"
          android:layout_marginVertical="5dp"
          android:elevation="2dp"
          android:background="@drawable/rounded_rectangle"
          android:backgroundTint="@color/white"
          android:contentDescription="@string/action_color_white" />
      </LinearLayout>
    </RelativeLayout>
  </ScrollView>

  <Space
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:layout_below="@id/scrollView" />
</RelativeLayout>